--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -201,4 +201,14 @@ jobs:
           # Выполняет pull образов с Docker Hub
           # Перезапускает все контейнеры в Docker Compose
           # Выполняет миграции и сбор статики
-          
+
+  send_message:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Send message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: Деплой успешно выполнен!
